--- a/ChooseMyLife/ChooseMyLife/templates/id.html
+++ b/ChooseMyLife/ChooseMyLife/templates/id.html
@@ -102,7 +102,8 @@ function fill_info() {
         exit_input('random_number','number')
     }
     value = dic["birth"];
-    if (value != undefined){   
+    if (value != undefined){  
+        value = value.split("%20").join(" ") 
         document.getElementById("birthday_input").value = value;
         exit_input('birthday_input','born');
     }
@@ -328,6 +329,8 @@ function pic_modify() {
     
 }
 #up_row {
+    filter: hue-rotate(32deg) brightness(1.3);
+    opacity: 0.5;
     position: absolute;
     width:116px;
     top: 76.3px;
