--- a/ChooseMyLife/ChooseMyLife/templates/deskboard.html
+++ b/ChooseMyLife/ChooseMyLife/templates/deskboard.html
@@ -156,6 +156,9 @@ function new_page() {
 function send(hash_id) {
     window.location.href = "../profile/" + hash_id
 }
+function tools() {
+    window.location.href = "../tools"
+}
 </script>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
@@ -202,6 +205,7 @@ header h3 {
             <h3>Choose a Personnality</h3>
         </header>
         <div id="button_div">
+            <button onclick="tools();">Tools</button>
             <button onclick="home_page();">Home</button>
         </div>
         <br>
