--- a/ChooseMyLife/ChooseMyLife/templates/tools.html
+++ b/ChooseMyLife/ChooseMyLife/templates/tools.html
@@ -88,6 +88,9 @@ function import_page() {
 function export_page() {
     window.location.href = "../export"
 }
+function export_plain_page() {
+    window.location.href = "../exportplain"
+}
 </script>
 <html>
     <head>
@@ -107,6 +110,7 @@ function export_page() {
                 <li onclick="id_page()">ID Generator</li>
                 <li onclick="import_page()">Import FILE</li>
                 <li onclick="export_page()">Export FILE</li>
+                <li onclick="export_plain_page()">Export Plain FILE</li>
             </ul>
         </div>
     </body>
